[gd_scene load_steps=10 format=3 uid="uid://3eetqyjaxx8x"]

[ext_resource type="Script" path="res://scenes/enemy_ability/projectile_ability/projectile_ability.gd" id="1_5c6ga"]
[ext_resource type="Texture2D" uid="uid://cx6bcdyt6pod8" path="res://assets/props/Shadow.png" id="2_krvel"]
[ext_resource type="Texture2D" uid="uid://5bcccd7i5uvg" path="res://assets/weapons/blood_projectile.png" id="3_6oaof"]
[ext_resource type="Texture2D" uid="uid://dlit23oawsds7" path="res://assets/particle_effects/blood_outer.png" id="3_b235c"]
[ext_resource type="Texture2D" uid="uid://ki0rij6w5e0e" path="res://assets/particle_effects/blood_inner.png" id="5_gsbbv"]

[sub_resource type="Curve" id="Curve_yst22"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_mwe8j"]
curve = SubResource("Curve_yst22")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_lbtoc"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 1.0
spread = 25.0
initial_velocity_min = 25.0
initial_velocity_max = 50.0
gravity = Vector3(0, 0, 0)
scale_min = 0.25
scale_max = 0.25
scale_curve = SubResource("CurveTexture_mwe8j")

[sub_resource type="CircleShape2D" id="CircleShape2D_7pxd2"]
radius = 4.0

[node name="ProjetileAbility" type="Node2D"]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_5c6ga")

[node name="ShadowSprite" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.745098)
texture = ExtResource("2_krvel")
offset = Vector2(0, 2)

[node name="Visuals" type="Node2D" parent="."]

[node name="OuterGPUParticles2D" type="GPUParticles2D" parent="Visuals"]
unique_name_in_owner = true
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_lbtoc")
texture = ExtResource("3_b235c")
lifetime = 0.4
preprocess = 5.0
fixed_fps = 0
interpolate = false
fract_delta = false

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("3_6oaof")

[node name="InnerGPUParticles2D" type="GPUParticles2D" parent="Visuals"]
unique_name_in_owner = true
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_lbtoc")
texture = ExtResource("5_gsbbv")
lifetime = 0.6
preprocess = 5.0
fixed_fps = 0
interpolate = false
fract_delta = false

[node name="CollisionArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea"]
visible = false
shape = SubResource("CircleShape2D_7pxd2")
